# Voice2Note-AI

./: .gitignore  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: flutter_ci.yml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  voice2note_whisper.cpp
android/app/src/main/kotlin/com/example/voice_2_note_ai/: AudioToWav16kMono.kt  MainActivity.kt  WhisperNative.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: network_security_config.xml
docs/: pc_whisper_sunucu.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: about_section_header.dart  app.dart  app_icons.dart  app_navigation.dart  initial_screen.dart  router.dart  show_app_about_dialog.dart  splash_screen.dart  theme.dart  theme_mode_menu_button.dart  theme_mode_provider.dart  theme_tokens.dart
lib/core/constants/: app_constants.dart
lib/core/errors/: app_exceptions.dart
lib/core/extensions/: string_extensions.dart
lib/core/utils/: date_formatter.dart
lib/database/: database_helper.dart  note_repository.dart  sqlite_note_repository.dart
lib/features/export/: pdf_preview_screen.dart
lib/features/notes/: note_detail_screen.dart  note_list_item.dart  notes_controller.dart  notes_provider.dart  notes_screen.dart  pending_processing_provider.dart  turkish_search_synonyms_section.dart  user_search_synonyms_provider.dart
lib/features/recording/: post_recording_pipeline.dart  record_button.dart  recording_controller.dart  recording_provider.dart  recording_screen.dart
lib/features/share/: share_preview_screen.dart
lib/features/speech_to_text/: remote_transcribe_settings_section.dart  transcribe_service.dart  whisper_ggml_model.dart  whisper_model_bootstrap.dart  whisper_model_constants.dart  whisper_model_download_section.dart  whisper_model_service.dart  whisper_platform_channel.dart  whisper_service.dart
lib/features/summary/: summary_controller.dart  textrank_algorithm.dart
lib/models/: note_model.dart
lib/services/: android_content_uri.dart  audio_to_note_pipeline.dart  notes_backup_service.dart  pdf_service.dart  recording_service.dart  remote_transcribe_settings.dart  server_url_nudge_prefs.dart  share_service.dart  speech_to_text_service.dart  summary_service.dart  turkish_search_synonym_prefs.dart  whisper_audio_import.dart
lib/utils/: audio_duration_probe.dart  turkish_search_synonyms.dart  turkish_text.dart  wav_pcm_info.dart
lib/widgets/: note_preview_section_card.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
server/pc_whisper_server/: README.md  main.py  requirements.txt
test/app/: theme_mode_menu_button_test.dart  theme_mode_preference_test.dart
test/features/: whisper_ggml_model_test.dart
test/features/notes/: pending_processing_provider_test.dart
test/features/speech_to_text/: transcribe_timeout_test.dart  whisper_model_constants_test.dart  whisper_timeout_test.dart
test/models/: note_model_test.dart
test/services/: notes_backup_service_test.dart
test/utils/: turkish_search_synonyms_test.dart  turkish_text_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
